--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,52 @@ body{
     font-family: 'Open Sans', sans-serif;
 }
 
-header .line{
-    background-color: #117050;
-    height: 10px;
-}
-
 .container{
     max-width: 1140px;
     margin: auto;
+}
+
+.bar{
+    background-color: #117050;
+    width: 168px;
+    height: 22px;
+}
+
+h1{
+    font-family: 'Oswald', sans-serif;
+    font-size: 90px;
+    font-weight: bold;
+    line-height: 100px;
+    margin-bottom: 30px;
+}
+
+h2{
+    font-family: 'Oswald', sans-serif;
+    font-size: 35px;
+    font-weight: bold;
+    margin: 0;
+    line-height: 45px;
+    margin: 20px 0;
+}
+
+.button{
+    border: 2px solid #454545;
+    display: inline-block;
+    padding: 10px 30px;
+    border-radius: 3px;
+    color: #454545;
+    text-decoration: none;
+
+}
+
+.button:hover{
+    background-color: #454545;
+    color: #fff;
+}
+
+header .line{
+    background-color: #117050;
+    height: 10px;
 }
 
 .header--area{
@@ -70,4 +108,54 @@ header .line{
 .header--menu img{
     width: 24px;
     height: 24px;
+}
+
+.banner{
+    background-image: url('../img/bg.jpg');
+    background-position: center;
+    background-size: cover;
+    padding-top: 190px;
+    padding-bottom: 190px;
+}
+
+.banner--imagens img{
+    width: 148px;
+    height: 148px;
+    border: 6px solid #117050;
+    border-radius: 50%;
+    margin-top: 60px;
+    margin-right: 40px;
+}
+
+.area1{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.area1--content{
+    padding: 80px;
+}
+
+.area1--quote{
+    margin-bottom: 30px;
+}
+
+.area1--text{
+    margin-bottom: 50px;
+    line-height: 25px;
+}
+
+.area1--img1{
+    height: 350px;
+    background-image: url('../img/f2.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.area1--img2{
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    background-image: url('../img/f1.jpg');
+    background-position: center;
+    background-size: cover;
 }
