--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,3 +159,183 @@ header .line{
     background-position: center;
     background-size: cover;
 }
+
+
+.area2{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.area2--content{
+    padding: 80px;
+}
+
+.area2--text{
+    margin-bottom: 50px;
+    line-height: 25px;
+}
+
+.area2--img1{
+    height: 460px;
+    background-image: url('../img/f4.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.area2--img2{
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    background-image: url('../img/f3.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.area3{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.area3--content{
+    padding: 300px 80px;
+    background-image: url('../img/bg2.jpg');
+    background-position: left;
+    background-size: cover;
+}
+
+.area3--text{
+    margin-bottom: 50px;
+    line-height: 25px;
+}
+
+.area3--img{
+    background-image: url('../img/f5.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.area4{
+    display: grid;
+    grid-template-columns: 600px 1fr;
+    background-color: #e8e9ee;
+}
+
+.area4--content{
+    padding: 150px 80px;
+}
+
+.area4--text{
+    margin-bottom: 50px;
+    line-height: 25px;
+}
+
+.area4--img1{
+    background-image: url('../img/bg3.jpg');
+    background-position: left ;
+}
+
+.area5{
+    background-image: url('../img/bg4.jpg');
+    background-position: center;
+    background-size: cover;
+    height: 600px;
+}
+
+footer{
+        background-color: #333;
+        color: #fff;
+        padding: 80px;
+        text-align: center;
+}
+
+@media (min-width: 769px) and (max-width: 1140px){
+    .container{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+@media (min-width: 426px) and (max-width: 768px){
+    .container{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .area1{
+        grid-template-columns: 3fr 2fr;
+    }
+    .area2{
+        grid-template-columns: 2fr 3fr;
+    }
+    .area3{
+        grid-template-columns: 3fr 2fr;
+    }
+}
+
+@media (max-width: 425px){
+    .container{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .header--menu{
+        margin-left: 20px;
+    }
+    
+    .header--search input{
+        max-width: 150px;
+    }
+
+    h1{
+        font-size: 50px;
+        line-height: 50px;
+    }
+
+    .banner--imagens img{
+        width: 70px;
+        height: 70px;
+        border: 3px solid #117050;
+        border-radius: 50%;
+        margin-top: 60px;
+        margin-right: 10px;
+    }
+
+    .area1{
+        grid-template-columns: 1fr;
+    }
+
+    .area1--content{
+        padding: 40px;
+    }
+
+    .area2{
+        grid-template-columns: 1fr;
+    }
+
+    .area2--content{
+        padding: 40px;
+    }
+
+    .area3{
+        grid-template-columns: 1fr;
+    }
+
+    .area3--content{
+        padding: 40px;
+    }
+
+    .area4{
+        grid-template-columns: 1fr;
+    }
+
+    .area4--content{
+        padding: 40px;
+    }
+
+    .area5{
+        height: 200px;
+    }
+
+    footer{
+        font-size: 12px;
+        padding: 40px 20px;
+    }
+}
